MNT: Add Denys Séguret as a maintainer
* Add Denys Séguret to maintainers list.
* Update homepage.
* Re-rendered with conda-smithy 3.54.1 and conda-forge-pinning 2026.01.13.21.47.52
Other tools:
- conda-build 25.11.1
- rattler-build 0.55.1
- rattler-build-conda-compat 1.4.10

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -38,7 +38,7 @@ tests:
   - script: dysk --help
 
 about:
-  homepage: https://github.com/Canop/dysk
+  homepage: https://dystroy.org/dysk
   summary: A utility listing your filesystems
   license: MIT
   license_file:
@@ -48,4 +48,5 @@ about:
 
 extra:
   recipe-maintainers:
+    - Canop
     - matthewfeickert
